src/input/css/global.css
/* stylelint-disable font-family-no-missing-generic-family-keyword */
html {
	--link: var(--accent-solid);
	--link-visited: var(--accent-solid-hover);

	accent-color: var(--link);
	background-color: var(--neutral-base);
	caret-color: var(--link);
	color: var(--neutral-text);
}

body {
	font-family: "Work Sans", var(--font-sans), "Noto Color Emoji",
		"Apple Color Emoji", "Twemoji Mozilla", "Segoe UI Emoji", "Segoe UI Symbol",
		"EmojiOne Color", "Android Emoji";
	font-size: var(--font-size-2);
	font-weight: var(--font-weight-body-normal);
	overflow-x: hidden;

	& > :is(header, main, footer) {
		isolation: isolate;
		position: relative;
		z-index: 0;
	}
}

main {
	--flow-space: var(--size-10);

	margin-block: var(--size-8);

	/* only doing this as it has a tabindex of -1 for the skip link */
	&:focus-visible {
		outline: none;
	}

	& > * :where(*) {
		--flow-space: 1em;
	}

	@media (width >= 768px) {
		margin-block: var(--size-10);
	}
}

:is(h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6, dt) {
	--font-wonkiness: 1;
	--font-softness: 100;

	color: var(--neutral-text-contrast);
	font-family: Fraunces, var(--font-serif), "Noto Color Emoji",
		"Apple Color Emoji", "Twemoji Mozilla", "Segoe UI Emoji", "Segoe UI Symbol",
		"EmojiOne Color", "Android Emoji";
	font-optical-sizing: auto;
	font-variation-settings: "SOFT" var(--font-softness),
		"WONK" var(--font-wonkiness);
	font-weight: var(--font-weight-7);
	text-wrap: balance;
}

:is(h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6) {
	inline-size: fit-content;
}

h1,
.h1 {
	font-size: var(--font-size-7);
	max-inline-size: var(--size-header-1);
}

h2,
.h2 {
	font-size: var(--font-size-5);
	max-inline-size: var(--size-header-2);
}

h3,
.h3 {
	font-size: var(--font-size-4);
}

:is(h3, .h3, h4, .h4, h5, .h5, h6, .h6, dt) {
	max-inline-size: var(--size-header-3);
}

:is(h4, .h4, h5, .h5, h6, .h6) {
	font-size: var(--font-size-3);
}

:is(p, ul, ol, dl) {
	font-size: var(--font-size-2);
}

:is(p, ul, ol, dl) {
	text-wrap: balance;
	text-wrap: pretty;
}

strong:not(
		h1,
		.h1,
		h2,
		.h2,
		h3,
		.h3,
		h4,
		.h4,
		h5,
		.h5,
		h6,
		.h6,
		pre,
		code,
		kbd,
		var,
		samp
	) {
	color: var(--accent-text);
	font-weight: var(--font-weight-body-bold);
}

em {
	color: var(--accent-text);
	font-style: italic;
}

/* Code */

code,
kbd,
samp,
pre {
	font-family: "JetBrains Mono", var(--font-mono), "Noto Color Emoji",
		"Apple Color Emoji", "Twemoji Mozilla", "Segoe UI Emoji", "Segoe UI Symbol",
		"EmojiOne Color", "Android Emoji";
}

pre {
	max-inline-size: max-content;
	min-inline-size: 0;
	white-space: pre;
}

:not(pre) > code {
	background-color: var(--neutral-bg-subtle);
	border-radius: var(--radius-2);
	padding: var(--size-1) var(--size-2);
}

kbd,
var {
	border-color: var(--neutral-bg-hover);
	border-radius: var(--radius-2);
	border-width: var(--border-size-1);
	padding: var(--size-1) var(--size-2);
}

/* Links */

:where(a) {
	background-color: transparent;
	border-radius: var(--radius-2);
	box-decoration-break: clone;
	margin-inline: calc(var(--size-1) * -1);
	padding-inline: var(--size-1);
	text-decoration: underline;
	text-decoration-color: currentcolor;
	text-decoration-thickness: 0.1em;
	transition-duration: 200ms;
	transition-property: background-color, text-decoration-color;
	transition-timing-function: var(--ease-2);

	&:where([href]) {
		color: var(--link);

		&:visited {
			color: var(--link-visited);
		}

		&:hover {
			background-color: var(--accent-bg);
			text-decoration-color: transparent;
		}

		&:active {
			background-color: var(--accent-bg-hover);
		}
	}

	:is(span):has(+ &) .inline-icon {
		color: var(--link);
	}
}

u,
ins,
abbr {
	text-underline-offset: 1px;
}

/* Form inputs */

:is(input, textarea) {
	padding-block: var(--size-1);
	padding-inline: var(--size-2);
}

select {
	padding-block: 0.75ch;
	padding-inline: 1.25ch 0;
}

:is(
		textarea,
		select,
		input:not(
				button,
				button[type],
				input[type="button"],
				input[type="submit"],
				input[type="reset"]
			)
	) {
	background-color: var(--neutral-base);
	border-color: var(--neutral-bg);
	border-radius: var(--radius-2);
	border-width: var(--border-size-1);

	&:focus-visible {
		border-color: transparent;
	}
}

:is(input[type="checkbox"], input[type="radio"]) {
	block-size: var(--size-3);
	inline-size: var(--size-3);
}

/* Typography */

mark {
	border-radius: var(--radius-2);
	padding-inline: var(--size-1);
}

:is(ol, ul):not([class], [role="list"]) {
	padding-left: var(--size-6);

	& li {
		padding-left: var(--size-2);
	}
}

:is(li, dd) {
	max-inline-size: var(--size-content-2);
}

p {
	max-inline-size: var(--size-content-3);

	&:empty {
		display: none;
	}
}

:is(dt, summary) {
	font-weight: var(--font-weight-body-bold);
}

small {
	font-size: var(--font-size-0);
	max-inline-size: var(--size-content-1);
}

hr {
	background-color: var(--neutral-bg);
	height: var(--border-size-2);
	margin-block: var(--size-fluid-5);
}

/* iFrames */

:not(lite-youtube) > iframe {
	border: var(--border-size-2) solid var(--neutral-border);
	border-radius: var(--radius-2);
	inline-size: 100ch;
	min-block-size: 400px;
	min-inline-size: 175px;
	padding: var(--size-3);
	resize: both;
}

.iframe-container {
	block-size: fit-content;
	border-radius: var(--radius-2);
	inline-size: fit-content;
	overflow: hidden;
	position: relative;

	&::after {
		block-size: var(--size-3);
		border-left: var(--size-3) solid transparent;
		border-right: var(--size-3) solid transparent;
		border-top: var(--size-3) solid var(--neutral-border);
		bottom: -2px;
		content: "";
		display: block;
		inline-size: var(--size-3);
		pointer-events: none;
		position: absolute;
		right: -10px;
		transform: rotate(-45deg);
		z-index: -1;
	}
}

/* Figures */

figure {
	display: grid;
	gap: var(--size-3);
	justify-items: center;

	& > figcaption {
		font-size: var(--font-size-1);
		font-style: italic;
		padding-inline: var(--size-5);
		text-align: right;

		&.no-italics {
			font-style: normal;
		}
	}

	& > :is(picture, svg, sl-animated-image) + figcaption {
		text-align: center;
	}
}

/* Picture and video */

picture .image,
video {
	border-radius: var(--radius-2);
}

/* Blockquote */

blockquote {
	background-color: var(--neutral-bg-subtle);
	border-bottom-right-radius: var(--radius-3);
	border-left: var(--border-size-3) solid var(--accent-border);
	border-top-right-radius: var(--radius-3);
	display: grid;
	font-family: Fraunces, var(--font-serif), "Noto Color Emoji",
		"Apple Color Emoji", "Twemoji Mozilla", "Segoe UI Emoji", "Segoe UI Symbol",
		"EmojiOne Color", "Android Emoji";
	font-size: var(--font-size-3);
	font-style: italic;
	font-weight: 420;
	gap: var(--size-3);
	padding-block: var(--size-3);
	padding-inline: var(--size-5);
	text-wrap: balance;
}

/* Details */

summary {
	border-radius: var(--radius-2);
	margin: calc(var(--size-2) * -1) calc(var(--size-3) * -1);
	padding: var(--size-2) var(--size-3);
}

details {
	background-color: var(--accent-bg-subtle);
	border-radius: var(--radius-2);
	padding-block: var(--size-2);
	padding-inline: var(--size-3);
}

details[open] > summary {
	border-end-end-radius: 0;
	border-end-start-radius: 0;
	margin-bottom: var(--size-2);
}

/* Tables */
.table-container {
	--_border: var(--border-size-1) solid var(--accent-4);

	background-color: var(--accent-bg);
	border: var(--_border);
	border-radius: var(--radius-3);
	overflow-x: auto;
	position: relative;

	@media (any-pointer: fine) and (width <= 735px) {
		&,
		& * {
			border-bottom-left-radius: 0 !important;
			border-bottom-right-radius: 0 !important;
		}
	}

	& table {
		border-collapse: collapse;
		border-spacing: 0;
		display: table;
		min-width: 650px;
		width: 100%;

		& caption {
			background-color: var(--accent-3);
			border-radius: var(--radius-2);
			font-style: italic;
			padding-block: var(--size-1);
			padding-inline: var(--size-2);
			position: absolute;
			right: 1rem;
			top: -2rem;
			z-index: -1;
		}

		@media (hover: hover) {
			& caption {
				top: -0.5rem;
				transition: top 200ms var(--ease-elastic-3);
			}

			&:hover caption {
				top: -2rem;
				transition: top 300ms var(--ease-squish-3);
			}
		}

		& thead {
			display: table-header-group;
		}

		& tbody {
			display: table-row-group;
		}

		& tfoot {
			display: table-footer-group;
		}

		& tr {
			color: inherit;
			display: table-row;
			outline: 0;
			vertical-align: middle;
		}

		& :is(th, td) {
			display: table-cell;
			font-size: 0.875rem;
			padding-block: var(--size-3);
			padding-inline: var(--size-3);
			vertical-align: inherit;
		}

		& th {
			font-weight: var(--font-weight-body-bold);
			text-align: left;
		}

		& td {
			background-color: var(--accent-bg-subtle);
			text-align: left;
		}

		& tbody tr:not(:last-child) :is(th, td),
		& thead tr :is(th, td) {
			border-bottom: var(--_border);
		}

		&:not(:has(thead)) tr:first-child td:last-child {
			border-top-right-radius: var(--radius-3);
		}

		&:not(:has(thead)) tr:first-child td:first-child {
			border-top-left-radius: var(--radius-3);
		}

		& thead tr:first-child td:last-child {
			border-top-right-radius: var(--radius-3);
		}

		& thead tr:first-child td:first-child {
			border-top-left-radius: var(--radius-3);
		}

		/* stylelint-disable-next-line no-descending-specificity */
		& tr:last-child td:last-child {
			border-bottom-right-radius: var(--radius-3);
		}

		/* stylelint-disable-next-line no-descending-specificity */
		& tr:last-child td:first-child {
			border-bottom-left-radius: var(--radius-3);
		}
	}
}

/* Misc */

fieldset {
	border: var(--border-size-1) solid var(--neutral-bg-hover);
	border-radius: var(--radius-2);
}

mark::before,
mark::after,
del::before,
del::after,
ins::before,
ins::after,
s::before,
s::after {
	clip: rect(1px, 1px, 1px, 1px);
	clip-path: inset(100%);
	height: 1px;
	overflow: hidden;
	position: absolute;
	white-space: nowrap;
	width: 1px;
}

mark::before {
	content: " [highlight start] ";
}

mark::after {
	content: " [highlight end] ";
}

@media screen and (-ms-high-contrast: active) {
	mark {
		background-color: Highlight;
		color: HighlightText;
	}
}

del,
s {
	color: var(--error);
}

del::before {
	content: " [deletion start] ";
}

del::after {
	content: " [deletion end] ";
}

s::before {
	content: " [start of stricken text] ";
}

s::after {
	content: " [end stricken text] ";
}

@media screen and (-ms-high-contrast: active) {
	s {
		text-decoration-color: Highlight;
	}
}

ins {
	color: var(--success);
}

ins::before {
	content: " [insertion start] ";
}

ins::after {
	content: " [insertion end] ";
}

@media screen and (-ms-high-contrast: active) {
	ins {
		border-bottom-color: Highlight;
	}
}

abbr {
	text-decoration-color: var(--info);

	&[title] {
		cursor: help;
	}
}

/* Dialog */

dialog {
	background-color: var(--neutral-base, Canvas);
	border-radius: var(--radius-3);
	box-shadow: var(--shadow-6);
	color: inherit;
}

html[\:has\(dialog\[open\]\)],
html:has(dialog[open]) {
	overflow: hidden;
	padding-inline-end: var(--scrollbar-width);
}

menu {
	display: flex;
	gap: var(--size-3);
	padding-inline-start: 0;
}

/* General interactive states */

:focus-visible {
	outline: 2px solid var(--link);
	outline-offset: 0;
}

:not(:active):focus-visible {
	outline-offset: var(--size-1);
}

@media (prefers-reduced-motion: no-preference) {
	:focus-visible {
		transition: outline-offset 145ms var(--ease-2);
	}

	:defined:focus-visible {
		transition: outline-offset 145ms var(--ease-2), opacity 500ms var(--ease-3);
	}

	:not(:active):focus-visible {
		transition-duration: 0.25s;
	}
}

:target {
	scroll-margin-top: 2ex;
}

/* High contrast selection style */
::selection {
	background-color: var(--accent-text);
	color: var(--accent-bg);
}

/* If an element is [hidden] it needs to be max priority */
[hidden] {
	display: none !important;
}

